--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
